Create ApiControllers and update routes
