# public/api-docs/models/openapi.json
@@ -17,7 +17,7 @@
         ],
         "summary": "Returns all users",
         "description": "Returns all users from the system that the user has access to.",
-        "operationId": "miw_cget_users",
+        "operationId": "cget_users",
         "responses": {
           "200": {
             "description": "User array response",
@@ -55,7 +55,7 @@
         ],
         "summary": "Creates a new user",
         "description": "Creates a new user",
-        "operationId": "miw_post_users",
+        "operationId": "post_users",
         "responses": {
           "201": {
             "description": "`Created` User created",
@@ -146,7 +146,7 @@
         ],
         "summary": "Provides the list of HTTP supported methods",
         "description": "Return a `Allow` header with a list of HTTP supported methods.",
-        "operationId": "miw_options_users",
+        "operationId": "options_users",
         "responses": {
           "200": {
             "description": "`Allow` header ",
@@ -169,7 +169,7 @@
         ],
         "summary": "Returns a user based on a single ID",
         "description": "Returns the user identified by `userId`.",
-        "operationId": "miw_get_users",
+        "operationId": "get_users",
         "parameters": [
           {
             "$ref": "#/components/parameters/userId"
@@ -212,7 +212,7 @@
         ],
         "summary": "Updates a user",
         "description": "Updates the user identified by `userId`.",
-        "operationId": "miw_put_users",
+        "operationId": "put_users",
         "parameters": [
           {
             "$ref": "#/components/parameters/userId"
@@ -291,7 +291,7 @@
         ],
         "summary": "Deletes a user",
         "description": "Deletes the user identified by `userId`.",
-        "operationId": "miw_delete_users",
+        "operationId": "delete_users",
         "parameters": [
           {
             "$ref": "#/components/parameters/userId"
@@ -317,7 +317,7 @@
         ],
         "summary": "Provides the list of HTTP supported methods",
         "description": "Return a `Allow` header with a list of HTTP supported methods.",
-        "operationId": "miw_options_users_id",
+        "operationId": "options_users_id",
         "parameters": [
           {
             "$ref": "#/components/parameters/userId"
@@ -345,7 +345,7 @@
         ],
         "summary": "Returns all results",
         "description": "Returns all results from the system that the user has access to.",
-        "operationId": "miw_cget_results",
+        "operationId": "cget_results",
         "responses": {
           "200": {
             "description": "Result array response",
@@ -383,7 +383,7 @@
         ],
         "summary": "Creates a new result",
         "description": "Creates a new result",
-        "operationId": "miw_post_results",
+        "operationId": "post_results",
         "responses": {
           "201": {
             "description": "`Created` Result created",
@@ -434,7 +434,7 @@
         ],
         "summary": "Provides the list of HTTP supported methods",
         "description": "Return a `Allow` header with a list of HTTP supported methods.",
-        "operationId": "miw_options_results",
+        "operationId": "options_results",
         "responses": {
           "200": {
             "description": "`Allow` header ",
@@ -457,7 +457,7 @@
         ],
         "summary": "Returns a result based on a single ID",
         "description": "Returns the result identified by `resultId`.",
-        "operationId": "miw_get_results",
+        "operationId": "get_results",
         "parameters": [
           {
             "$ref": "#/components/parameters/resultId"
@@ -500,7 +500,7 @@
         ],
         "summary": "Updates a result",
         "description": "Updates the result identified by `resultId`.",
-        "operationId": "miw_put_results",
+        "operationId": "put_results",
         "parameters": [
           {
             "$ref": "#/components/parameters/resultId"
@@ -579,7 +579,7 @@
         ],
         "summary": "Deletes a result",
         "description": "Deletes the result identified by `resultId`.",
-        "operationId": "miw_delete_results",
+        "operationId": "delete_results",
         "parameters": [
           {
             "$ref": "#/components/parameters/resultId"
@@ -605,7 +605,7 @@
         ],
         "summary": "Provides the list of HTTP supported methods",
         "description": "Return a `Allow` header with a list of HTTP supported methods.",
-        "operationId": "miw_options_results_id",
+        "operationId": "options_results_id",
         "parameters": [
           {
             "$ref": "#/components/parameters/resultId"
